--- a/site/nginx/templates/nginx.conf.erb
+++ b/site/nginx/templates/nginx.conf.erb
@@ -1,1 +1,58 @@
+# For more information on configuration, see:
+#   * Official English Documentation: http://nginx.org/en/docs/
+#   * Official Russian Documentation: http://nginx.org/ru/docs/
 
+<% if @osfamily == 'RedHat' -%>
+user              nginx;
+<% blockDir = '/etc/nginx/conf.d' -%>
+<% cfgDir   = '/etc/nginx' -%>
+<% logDir   = '/var/log/nginx' -%>
+<% elsif @osfamily == 'Debian' -%>
+user              www-data;
+<% blockDir = '/etc/nginx/conf.d' -%>
+<% cfgDir   = '/etc/nginx' -%>
+<% logDir   = '/var/log/nginx' -%>
+<% elsif @osfamily == 'Windows' -%>
+user              nobody;
+<% blockDir = 'C:/ProgramData/nginx/conf.d' -%>
+<% cfgDir   = 'C:/ProgramData/nginx' -%>
+<% logDir   = 'C:/ProgramData/nginx/logs' -%>
+<% end -%>
+
+worker_processes  1;
+
+error_log  <%= logDir %>/error.log;
+#error_log  <%= logDir %>/error.log  notice;
+#error_log  <%= logDir %>/error.log  info;
+
+pid        /var/run/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
+
+
+http {
+    include       <%= cfgDir %>/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  <%= logDir %>/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    # Load config files from the /etc/nginx/conf.d directory
+    # The default server is in conf.d/default.conf
+    include <%= blockDir %>/*.conf;
+
+}
