--- a/site/nginx/templates/default.conf.erb
+++ b/site/nginx/templates/default.conf.erb
@@ -1,1 +1,14 @@
+server {
+    listen 80;
 
+<% if @osfamily == 'RedHat' -%>
+    root /var/www;
+<% if @osfamily == 'Debian' -%>
+    root /var/www;
+<% if @osfamily == 'Windows' -%>
+    root C:/ProgramData/nginx/html;
+<% end -%>
+    index index.html index.htm;
+
+    server_name _;
+}
