--- a/site/nginx/templates/nginx.conf.erb
+++ b/site/nginx/templates/nginx.conf.erb
@@ -4,18 +4,12 @@
 
 <% if @osfamily == 'RedHat' -%>
 user              nginx;
-<% blockDir = '/etc/nginx/conf.d' -%>
-<% cfgDir   = '/etc/nginx' -%>
 <% logDir   = '/var/log/nginx' -%>
 <% elsif @osfamily == 'Debian' -%>
 user              www-data;
-<% blockDir = '/etc/nginx/conf.d' -%>
-<% cfgDir   = '/etc/nginx' -%>
 <% logDir   = '/var/log/nginx' -%>
 <% elsif @osfamily == 'Windows' -%>
 user              nobody;
-<% blockDir = 'C:/ProgramData/nginx/conf.d' -%>
-<% cfgDir   = 'C:/ProgramData/nginx' -%>
 <% logDir   = 'C:/ProgramData/nginx/logs' -%>
 <% end -%>
 
@@ -34,7 +28,7 @@ events {
 
 
 http {
-    include       <%= cfgDir %>/mime.types;
+    include       <%= @cfgDir %>/mime.types;
     default_type  application/octet-stream;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -53,6 +47,6 @@ http {
 
     # Load config files from the /etc/nginx/conf.d directory
     # The default server is in conf.d/default.conf
-    include <%= blockDir %>/*.conf;
+    include <%= @blockDir %>/*.conf;
 
 }
